# helloworld-thrift

./: CMakeLists.txt  ClientPool.h  TThreadedClientPool.h  ThriftClient.h  client.cpp  client.py  helloworld.thrift  server.cpp  transfer.cpp
flamegraph/: kernel.bt  kernel.cbt  thrift.bt  thrift.cbt  user.bt  user.cbt
gen-cpp/: HelloworldService.cpp  HelloworldService.h  HelloworldService_server.skeleton.cpp  TransferService.cpp  TransferService.h  TransferService_server.skeleton.cpp  helloworld_constants.cpp  helloworld_constants.h  helloworld_types.cpp  helloworld_types.h
gen-java/: HelloworldService.java  TransferService.java
gen-py/helloworld/: HelloworldService-remote  HelloworldService.py  TransferService-remote  TransferService.py  __init__.py
thrift_sim/scripts/: run_test.sh
thrift_sim/stap_scripts/: thrift-time.stp  thrift-trace.stp
